--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "description": "meadowlark",
   "main": "meadowlark.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": { 
+    "test": "mocha -u tdd" 
+  }, 
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0"
   }
 }
