--- a/package.json
+++ b/package.json
@@ -3,17 +3,23 @@
   "version": "1.0.0",
   "description": "meadowlark",
   "main": "meadowlark.js",
-  "scripts": { 
-    "test": "mocha -u tdd" 
-  }, 
+  "scripts": {
+    "test": "mocha -u tdd"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "linkchecker": "^1.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "grunt": "^1.0.3",
+    "grunt-cafe-mocha": "^0.1.13",
+    "grunt-contrib-eslint": "0.0.5",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-exec": "^3.0.0",
     "mocha": "^5.2.0"
   }
 }
