--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bower": "^1.8.4",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "formidable": "^1.2.1",
+    "jquery-file-upload-middleware": "^0.1.8",
     "linkchecker": "^1.1.0"
   },
   "devDependencies": {
