--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bower": "^1.8.4",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "formidable": "^1.2.1",
     "jquery-file-upload-middleware": "^0.1.8",
     "linkchecker": "^1.1.0"
